fix ui issue on mobile screen

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -106,7 +106,7 @@
   margin: auto;
   display: inline-block;
 }
-.flex24 {
+.flexGrid24 {
   display: flex;
   padding-top: 24px;
 }
@@ -128,6 +128,22 @@
   border: none !important;
   object-fit: contain;
   width: 100%;
+}
+.textPadding {
+  padding-left: 10px;
+  padding-top: 8px;
+}
+
+@media (max-width: 768px) {
+  .flexGrid24 {
+    display: block;
+    flex-direction: column;
+    text-align: left;
+    padding-left: 0;
+  }
+  .textPadding {
+    padding-left: 0;
+  }
 }
 
 @media (max-width: 600px) {
